Bug 181910. Click on 2 links in quick succession, onload has problems with final loaded page. r=rpotts, sr=jst